@@ -1,5 +1,10 @@
 2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
 
+	* shares-conf.in (set): Merge things properly, so old options are kept.
+	* filesys.pl.in (xst_filesys_table_merge_subset): Fix doc text.
+
+2001-06-04  Hans Petter Jansson  <hpj@ximian.com>
+
 	* filesys.pl.in (xst_filesys_info_set_network_host): Nicen input slightly.
 	  (xst_filesys_info_set_network_path): Nicen input slightly.
 	  (xst_filesys_info_get_dump): Return 0 if empty.
